--- a/NoticeMe/src/main/App.form
+++ b/NoticeMe/src/main/App.form
@@ -110,19 +110,11 @@
             <Component class="javax.swing.JComboBox" name="cbo_dia_emision">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="7">
-                    <StringItem index="0" value="Lunes"/>
-                    <StringItem index="1" value="Martes"/>
-                    <StringItem index="2" value="Miercoles"/>
-                    <StringItem index="3" value="Jueves"/>
-                    <StringItem index="4" value="Viernes"/>
-                    <StringItem index="5" value="Sabado"/>
-                    <StringItem index="6" value="Domingo"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
               </Properties>
               <AuxValues>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
               </AuxValues>
             </Component>
             <Component class="javax.swing.JButton" name="jButton2">
